--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,7 +11,7 @@
 <body>
 <header id="site-header" class="header">
     <div class="header-div">
-        <button onclick="window.location.href='/login?logout=true'">Logout</button>
+        <button onclick="window.location.href='/logout'">Logout</button>
         <button onclick="window.location.href='/dashboard'">Dashboard</button>
     </div>
 </header>
