--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -37,9 +37,19 @@ body {
     transition: background-color 0.3s ease;
 }
 
+.header button.logout-button {
+    background-color: red;
+}
+
+.header button.logout-button:hover {
+    background-color: darkred;
+}
+
+
 .header button:hover {
     background-color: #0056b3;
 }
+
 
 @media (max-width: 600px) {
     .header-div {
@@ -52,6 +62,8 @@ body {
         margin: 4px 0;
     }
 }
+
+
 
 /* Main Content Styles */
 .main-content {
