--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,8 +11,8 @@
 <body>
 <header id="site-header" class="header">
     <div class="header-div">
-        <button onclick="window.location.href='/logout'">Logout</button>
-        <button onclick="window.location.href='/dashboard'">Dashboard</button>
+        <button class="dashboard-button" onclick="window.location.href='/dashboard'">Dashboard</button>
+        <button class="logout-button" onclick="window.location.href='/logout'">Logout</button>
     </div>
 </header>
 </body>
